<resources>
    <string name="app_name">MyCalculator</string>
    <string name="calc_text"></string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="divide">/</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="_clr" >CLR</string>
    <string name="dote">.</string>
    <string name="_equal">=</string>

    <style name="CalculatorButton">
        <item name="android:layout_margin">3dp</item>
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">match_parent</item>
        <item name="android:layout_weight">1</item>
        <item name="android:onClick">onDigit</item>
        <item name="android:background">@color/grey</item>

    </style>

</resources>
